; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/rsym/extr_rsym_common.c_load_file.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/rsym/extr_rsym_common.c_load_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@SEEK_END = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @load_file(i8* %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64* %1, i64** %4, align 8
  store i8* null, i8** %6, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32* @fopen(i8* %7, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %42

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* @SEEK_END, align 4
  %14 = call i32 @fseek(i32* %12, i64 0, i32 %13)
  %15 = load i32*, i32** %5, align 8
  %16 = call i64 @ftell(i32* %15)
  %17 = load i64*, i64** %4, align 8
  store i64 %16, i64* %17, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* @SEEK_SET, align 4
  %20 = call i32 @fseek(i32* %18, i64 0, i32 %19)
  %21 = load i64*, i64** %4, align 8
  %22 = load i64, i64* %21, align 8
  %23 = call i8* @malloc(i64 %22)
  store i8* %23, i8** %6, align 8
  %24 = load i8*, i8** %6, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %26, label %39

26:                                               ; preds = %11
  %27 = load i64*, i64** %4, align 8
  %28 = load i64, i64* %27, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = load i64*, i64** %4, align 8
  %31 = load i64, i64* %30, align 8
  %32 = load i32*, i32** %5, align 8
  %33 = call i64 @fread(i8* %29, i32 1, i64 %31, i32* %32)
  %34 = icmp ne i64 %28, %33
  br i1 %34, label %35, label %38

35:                                               ; preds = %26
  %36 = load i8*, i8** %6, align 8
  %37 = call i32 @free(i8* %36)
  store i8* null, i8** %6, align 8
  br label %38

38:                                               ; preds = %35, %26
  br label %39

39:                                               ; preds = %38, %11
  %40 = load i32*, i32** %5, align 8
  %41 = call i32 @fclose(i32* %40)
  br label %42

42:                                               ; preds = %39, %2
  %43 = load i8*, i8** %6, align 8
  ret i8* %43
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @fseek(i32*, i64, i32) #1

declare dso_local i64 @ftell(i32*) #1

declare dso_local i8* @malloc(i64) #1

declare dso_local i64 @fread(i8*, i32, i64, i32*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
